# ModernCmakeBoilerPlateExample

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: ExampleLibConfig.cmake
inc/cmake_sandbox/: Utilities.hpp
src/: CMakeLists.txt  Utilities.cpp
